--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -315,5 +315,9 @@
             </intent-filter>
         </receiver>
 
+        <provider android:name=".omni.CachedPlacesProvider"
+            android:authorities="com.android.dialer.omni.cachedplaces"
+            android:exported="false" />
+
     </application>
 </manifest>
